# kerops

./: .flake8  .gitignore  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: lint.yml
kerops/: utils.py
kerops/kernels/: addition.py  avgpool.py  bnrelu.py  dw_conv.py  linear.py  quantization.py  stats.py
kerops/ops/: _settings.py  addition.py  avgpool.py  bnrelu.py  conv.py  linear.py  quantization.py  stats.py
kerops/ops/conv/: __init__.py  dwconv.py  dwconv_wgrad.py
kerops/ops/linear/: __init__.py  linear_bias_relu_linear_add.py  linear_bias_relu_linear_backward.py  relu_linear_add.py  relu_linear_backward.py
kerops/settings/: __init__.py  hardware_conf.py  utils.py  wrapper.py
tests/: conftest.py  requirements.txt  test_ops.py
tests/ops/: test_add.py  test_avgpool.py  test_bn_relu.py  test_conv.py  test_linear.py  test_stats.py
