[build-system]
requires = ['setuptools>=43.0.0', 'wheel']
build-backend = 'setuptools.build_meta'

[project]
name = 'kerops'
dynamic = ['dependencies', 'version']
description = "Efficient gpu algorithms for 3D computer vision"
readme = 'README.md'
requires-python = '>=3.10'
license = { file = 'LICENSE' }
keywords = ['computer vision', 'fast', 'gpu', 'triton']
authors = [
    {name='AnihilatorGun', email='nikitaushakov.nu35@gmail.com'}
]
classifiers = [
    'Development Status :: 4 - Beta',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
]

[project.urls]
'Homepage' = 'https://github.com/neuro-ml/kerops'
'Issues' = 'https://github.com/neuro-ml/kerops/issues'
'Source' = 'https://github.com/neuro-ml/kerops'

[tool.black]
line-length = 120
skip-string-normalization = true

[tool.isort]
line_length = 120
lines_after_imports = 2
profile = 'black'
combine_as_imports = true

[tool.setuptools.packages.find]
where = ['.']

[tool.setuptools.dynamic]
version = { attr = 'kerops.__version__.__version__' }
dependencies = { file = 'requirements.txt' }
